# cplayer

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  devlog.txt  devlogs for cplayer.txt  main.cpp  requirements.txt  resources.qrc  vcpkg.json
cpp/: album.h  albumholder.cpp  albumholder.h  albumlistmodel.cpp  albumlistmodel.h  albumview.cpp  albumview.h  coverartholder.cpp  folderview.cpp  globalsingleton.cpp  globalsingleton.h  globalsingleton.h.autosave  main.cpp  mediaimageprovider.h  mediaplayercontroller.cpp  mediaplayercontroller.h  musiclibrary.cpp  musiclibrary.h  musicscannerthread.cpp  playlist.cpp  playlistmanager.cpp  playlistmanager.h  song.cpp  song.h  songholder.cpp  songholder.h  songlistmodel.cpp  songlistmodel.h  viewcontroller.cpp  viewcontroller.h
cpp/background/: CMakeLists.txt  musicscanner.cpp  musicscanner.h
cpp/cpp_models/: albumholder.cpp  coverartholder.h  musicscannerthread.cpp  musicscannerthread.h  playlist.cpp  song.cpp  song.h  songaddthread.cpp
cpp/cpp_models/include/: album.h  albumholder.h  coverartholder.h  folder.h  musicscannerthread.h  playlist.h  song.h  songaddthread.h
cpp/cpp_models/src/: album.cpp  coverartholder.cpp  folder.cpp  musiclibrary.cpp  musicscannerthread.cpp  playlist.cpp  song.cpp
cpp/downloaders/: soundcloud.cpp  soundcloud.h
cpp/downloaders/soundcloud/: CMakeLists.txt  scplaylist.cpp  scplaylist.h  soundcloud.cpp  soundcloud.h  soundcloudmodel.cpp  soundcloudmodel.h  soundcloudsearchworker.cpp  soundcloudsearchworker.h
cpp/image_providers/: CMakeLists.txt  coverimgprovider.cpp  coverimgprovider.h  playlistimageprovider.cpp  playlistimageprovider.h
cpp/image_providers/include/: mediaimageprovider.h  playlistimageprovider.h
cpp/image_providers/src/: mediaimageprovider.cpp  playlistimageprovider.cpp
cpp/managers/: CMakeLists.txt  albumsongsmanager.cpp  albumsongsmanager.h  downloadmanager.cpp  downloadmanager.h  foldermanager.cpp  foldermanager.h  playbackmanager.cpp  playbackmanager.h  playlistmanager.cpp  playlistmanager.h  playlistsongsmanager.cpp  playlistsongsmanager.h  songmanager.cpp  songmanager.h  songview.h  viewcontroller.cpp  viewcontroller.h
cpp/managers/models/: folderlistmodel.cpp  folderlistmodel.h
cpp/minGW_taglib/lib/cmake/taglib/: taglib-targets-noconfig.cmake  taglib-targets.cmake
cpp/minGW_taglib/lib/pkgconfig/: taglib.pc  taglib_c.pc
cpp/models/: CMakeLists.txt  modelhandler.h
cpp/models/album/: albumfilterproxymodel.cpp  albumfilterproxymodel.h  albumlistmodel.cpp  albumlistmodel.h  albumsearchfilter.cpp  albumsearchfilter.h
cpp/models/folder/: folderlistmodel.cpp  folderlistmodel.h
cpp/models/playlist/: playlistfilter.cpp  playlistfilter.h  playlistmodel.cpp  playlistmodel.h  playlistsongsmodel.cpp
cpp/models/song/: songfilterproxymodel.cpp  songfilterproxymodel.h  songlistmodel.cpp  songlistmodel.h
cpp/playback/: CMakeLists.txt  mediaplayercontroller.cpp  mediaplayercontroller.h  nowplaying.cpp  nowplaying.h  queue.cpp  queue.h  queuemodel.cpp  queuemodel.h  queuemodelfilter.h
cpp/playback/include/: mediaplayercontroller.h  nowplaying.h  playlistmanager.h
cpp/playback/models/: audiodevicemodel.cpp  audiodevicemodel.h  queuemodel.cpp  queuemodel.h  queuemodelfilter.cpp
cpp/playback/src/: mediaplayercontroller.cpp  nowplaying.cpp  playlistmanager.cpp
cpp/qml_models/: albumfilterproxymodel.cpp  playlistfilter.cpp
cpp/qml_models/include/: albumfilterproxymodel.h  albumlistmodel.h  albumsearchfilter.h  folderlistmodel.h  modelhandler.h  musichandler.h  playlistfilter.h  playlistmodel.h  playlistsongsmodel.h  songfilterproxymodel.h  songlistmodel.h
cpp/qml_models/src/: albumfilterproxymodel.cpp  albumlistmodel.cpp  albumsearchfilter.cpp  folderlistmodel.cpp  modelhandler.cpp  musichandler.cpp  playlistfilter.cpp  playlistmodel.cpp  playlistsongsmodel.cpp  songfilterproxymodel.cpp  songlistmodel.cpp
cpp/types/: CMakeLists.txt  album.cpp  album.h  folder.cpp  folder.h  playlist.cpp  playlist.h  song.cpp  song.h  songdata.h
cpp/utility/: settingsmanager.cpp  settingsmanager.h
cpp/utility/include/: settingsmanager.h  utilitysingleton.h
cpp/utility/src/: settingsmanager.cpp  utilitysingleton.cpp
cpp/views/: albumsongsview.cpp  albumsongsview.h  albumview.cpp  folderview.cpp  playlistmanager.cpp  playlistmanager.h  playlistsongsview.cpp  viewcontroller.h
cpp/views/include/: albumsongsview.h  albumview.h  folderview.h  playlistmanager.h  playlistsongsview.h  playlistview.h  songview.h  viewcontroller.h
cpp/views/src/: albumsongsview.cpp  albumview.cpp  folderview.cpp  playlistmanager.cpp  playlistview.cpp  songview.cpp  viewcontroller.cpp
qml/: AlbumSongs.qml  Albums.qml  Folders.qml  Main.qml  MainWindow.qml  MediaSlider.qml  PlaylistSongs.qml  Playlists.qml  Settings.qml  Sidebar.qml  Songs.qml
qml/components/: AlbumInfo.qml  AudioDevices.qml.autosave  AudioDevicesPopup.qml  CButton.qml  DlPopup.qml  EditPlaylist.qml  EditSong.qml  ErrorPopup.qml  FolderDelPopUp.qml  FolderDelegate.qml  MediaSlider.qml  MsgPopup.qml  NowPlayingRect.qml  PlaylistContextMenu.qml  SongContextMenu.qml  SongDelegate.qml
qml/components/loading/: RectangleLoader.qml
qml/delegates/: AlbumDelegate.qml  FolderDelegate.qml  SongDelegate.qml  SongViewDelegate.qml
qml/views/: AlbumSongs.qml  Albums.qml  CSidebar.qml  Folders.qml  HomePage.qml  MainWindow.qml  PlaylistSongs.qml  Playlists.qml  Search.qml  Settings.qml  Sidebar.qml  Songs.qml
tests/: CMakeLists.txt
xtras/taglib/lib/cmake/taglib/: taglib-targets-release.cmake  taglib-targets.cmake
xtras/taglib_static/lib/cmake/taglib/: taglib-targets-release.cmake  taglib-targets.cmake
xtras/taglib_static/lib/pkgconfig/: taglib.pc
